--- a/EyYo/Base.lproj/Main.storyboard
+++ b/EyYo/Base.lproj/Main.storyboard
@@ -202,13 +202,6 @@
                                     <action selector="closedBtnPressed:" destination="mkK-He-fIo" eventType="touchUpInside" id="jxL-D9-iCC"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQz-q7-m6B">
-                                <rect key="frame" x="81.5" y="330" width="211" height="27"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" title="Don't have an account? Sign up here!">
-                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
                             <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="grf-gT-hb6">
                                 <rect key="frame" x="131.5" y="80" width="112.5" height="40"/>
                                 <subviews>
@@ -227,6 +220,16 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQz-q7-m6B">
+                                <rect key="frame" x="82" y="338" width="211" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Don't have an account? Sign up here!">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="createAccntBtnPressed:" destination="mkK-He-fIo" eventType="touchUpInside" id="8mL-HF-xaB"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -242,10 +245,167 @@
                             <constraint firstItem="YEO-Z3-f80" firstAttribute="top" secondItem="tkM-qW-EdV" secondAttribute="bottom" constant="40" id="xVc-6T-6Uh"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <segue destination="xKO-2T-HnB" kind="show" identifier="toCreateAccount" id="hNG-UP-ZOx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="POE-b0-Mc7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1864.8" y="-335.08245877061472"/>
+        </scene>
+        <!--Create AccountVC-->
+        <scene sceneID="eE5-tk-EdL">
+            <objects>
+                <viewController id="xKO-2T-HnB" customClass="CreateAccountVC" customModule="EyYo" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BIq-PH-wGG"/>
+                        <viewControllerLayoutGuide type="bottom" id="xyP-kj-HzG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DXi-aq-WFK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7jQ-Nr-vhq">
+                                <rect key="frame" x="62" y="597" width="250" height="50"/>
+                                <color key="backgroundColor" red="0.29411764705882354" green="0.55294117647058827" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="eSP-Zp-jl9"/>
+                                    <constraint firstAttribute="height" constant="50" id="lvE-b6-dF5"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
+                                <state key="normal" title="Create Account">
+                                    <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="9ho-k6-kNO">
+                                <rect key="frame" x="63" y="124" width="250" height="127"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qTK-Ra-8YZ">
+                                        <rect key="frame" x="0.0" y="0.0" width="250" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="ppd-Pi-5Ok"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ohf-v6-VIq">
+                                        <rect key="frame" x="0.0" y="31" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="IhF-XO-qyl"/>
+                                            <constraint firstAttribute="height" constant="2" id="bAg-Aj-c2a"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="m5I-Jj-jVY">
+                                        <rect key="frame" x="0.0" y="47" width="250" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="pfV-II-FhM"/>
+                                        </constraints>
+                                        <color key="textColor" red="0.47684186699999997" green="0.50480759139999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9ej-SB-iKm">
+                                        <rect key="frame" x="0.0" y="78" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="gDk-46-erK"/>
+                                            <constraint firstAttribute="height" constant="2" id="uoE-oJ-IT3"/>
+                                        </constraints>
+                                    </view>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lxs-QL-sre">
+                                        <rect key="frame" x="0.0" y="94" width="250" height="17"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="mpx-Fw-RBf"/>
+                                        </constraints>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5lW-VE-x3I">
+                                        <rect key="frame" x="0.0" y="125" width="250" height="2"/>
+                                        <color key="backgroundColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="dsn-0f-7WH"/>
+                                            <constraint firstAttribute="height" constant="2" id="rps-Co-OaZ"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create an account" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oF3-AX-Amc">
+                                <rect key="frame" x="99.5" y="60" width="176" height="24"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
+                                <color key="textColor" red="0.25882352939999997" green="0.3294117647" blue="0.72549019609999998" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileDefault" translatesAutoresizingMaskIntoConstraints="NO" id="DMG-7k-HWi">
+                                <rect key="frame" x="137.5" y="291" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="ERK-3W-dMg"/>
+                                    <constraint firstAttribute="height" constant="100" id="oLq-fy-kdi"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="bottom" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="USu-Yw-04v">
+                                <rect key="frame" x="137.5" y="291" width="100" height="130"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="130" id="fv5-Kt-QjM"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="Choose Avatar">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXO-6N-f3w">
+                                <rect key="frame" x="62.5" y="429" width="250" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="250" id="dJv-cx-cMZ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                                <state key="normal" title="Generate background color">
+                                    <color key="titleColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.73725490199999999" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j9P-Pz-evf">
+                                <rect key="frame" x="329" y="28" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="RgI-ot-CsS"/>
+                                    <constraint firstAttribute="width" constant="30" id="cIQ-PY-gTV"/>
+                                </constraints>
+                                <state key="normal" image="closeButton"/>
+                                <connections>
+                                    <action selector="closedBtnPressed:" destination="mkK-He-fIo" eventType="touchUpInside" id="JoE-9R-3d4"/>
+                                    <action selector="closedPressed:" destination="xKO-2T-HnB" eventType="touchUpInside" id="pUN-oE-4Dr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="9ho-k6-kNO" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="8Hv-Fh-xav"/>
+                            <constraint firstItem="j9P-Pz-evf" firstAttribute="top" secondItem="BIq-PH-wGG" secondAttribute="bottom" constant="8" id="Eoz-iW-Hbs"/>
+                            <constraint firstItem="xyP-kj-HzG" firstAttribute="top" secondItem="7jQ-Nr-vhq" secondAttribute="bottom" constant="20" id="Lkb-2y-iWW"/>
+                            <constraint firstItem="DMG-7k-HWi" firstAttribute="top" secondItem="9ho-k6-kNO" secondAttribute="bottom" constant="40" id="W1m-pm-ujK"/>
+                            <constraint firstItem="MXO-6N-f3w" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="Wuh-NP-JOo"/>
+                            <constraint firstItem="USu-Yw-04v" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="aae-w3-y0e"/>
+                            <constraint firstItem="DMG-7k-HWi" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="e9H-xB-raL"/>
+                            <constraint firstItem="USu-Yw-04v" firstAttribute="width" secondItem="DMG-7k-HWi" secondAttribute="width" id="fVp-CP-ZKs"/>
+                            <constraint firstItem="USu-Yw-04v" firstAttribute="top" secondItem="DMG-7k-HWi" secondAttribute="top" id="heO-wW-Fnl"/>
+                            <constraint firstItem="oF3-AX-Amc" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="kF1-8Y-TOk"/>
+                            <constraint firstItem="j9P-Pz-evf" firstAttribute="trailing" secondItem="DXi-aq-WFK" secondAttribute="trailingMargin" id="m69-7t-kEA"/>
+                            <constraint firstItem="MXO-6N-f3w" firstAttribute="top" secondItem="USu-Yw-04v" secondAttribute="bottom" constant="8" id="rCC-LI-ccA"/>
+                            <constraint firstItem="9ho-k6-kNO" firstAttribute="top" secondItem="oF3-AX-Amc" secondAttribute="bottom" constant="40" id="rah-1P-Jpd"/>
+                            <constraint firstItem="7jQ-Nr-vhq" firstAttribute="centerX" secondItem="DXi-aq-WFK" secondAttribute="centerX" id="tYb-S5-EZi"/>
+                            <constraint firstItem="oF3-AX-Amc" firstAttribute="top" secondItem="BIq-PH-wGG" secondAttribute="bottom" constant="40" id="vGC-X5-IlQ"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <segue destination="o87-LT-rgX" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="4lX-ZJ-WIB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LZ9-CX-eew" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="o87-LT-rgX" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2752.8000000000002" y="-341.37931034482762"/>
         </scene>
         <!--ChatVC-->
         <scene sceneID="7qr-7O-a2u">
@@ -307,6 +467,7 @@
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
+        <image name="profileDefault" width="192" height="192"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
